<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <RelativeLayout
        android:id="@+id/whiteRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginBT"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainLL"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loginrounderselector"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/logoIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:src="@drawable/login_logo" />


        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/editextbg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="15dp"
                    android:src="@drawable/username" />

                <com.aspire.customcontrols.EditTextRegular
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/editextbg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:src="@drawable/password_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/showPasswordIV"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/password_open" />

                    <com.aspire.customcontrols.EditTextRegular
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/showPasswordIV"
                        android:background="@null"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:textSize="16sp" />



                </RelativeLayout>


            </LinearLayout>

            <CheckBox
                android:id="@+id/rememberMeCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/remember_me"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/biometricsCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/biometric_authentication"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <com.aspire.customcontrols.TextViewRegular
        android:id="@+id/forgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/i_forgot_my_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

</RelativeLayout>